# mars_challenge

./: README.md  notes.txt  notes_cpp.txt
cpp/: CMakeLists.txt  Plateau.h  hello_test.cc  main.cpp  rover.cpp  rover.h  simplemath.cpp  simplemath.h
